pl 41
	- standard naming: _FILES
	- use install-sh
	- junked most check-X-deps
	- standard naming: dir/out/library.a
	- split C++ / C stuff in separate files.  Moved out of default stuff
	- automake.yo updates
	- fake-yodl.sh

pl 40
	- bf's: texinfo
	- bf's: package-zip.sh for bash-2.0
	- typo package-diff

pl 39
	- disabled toplevel index

pl 38
	- bf's: topweb, Documentation
	- bf: ls-latex

pl 37
	- bf's: add-html-footer (ok, i've been reading /.)
	
pl 36.hwn1
	- Metafont.make
	- use := assignment for shell & wildcard stuff

pl 36
	- bf: Executable.make install

pl 35
	- bf: Po_rules
	- grand foreach hack (HWN)

pl 34
	- stepmake/*shared.make

pl 33
	- make dist fix
	- yodl/lily website fixes

pl 32
 	- DEPTH: enable fixing of 'yodl using yodl'
 	- bf's: package-diff: --dir-* 

pl 31.hwn1
	- bf ls-latex.py; added format

pl 31
	- fixed make-flags
	- fixup package-diff and added to-dir, from-dir

pl 30.hwn2
	- 

pl 30.hwn1
	- doc++ target	
	- make -> $(MAKE)

pl 30
	- add-html-footer: html/body/title

pl 29.hwn1
	- automake.urgh -> automake.yo

pl 29
	- counter fix

pl 28
	- mini fix voor soladeris (HWN)
	- add-html-footer fixes
	- dropped pl

pl 27
	- irix fixes(?) (HWN)

pl 26.jcn3
	- update.py: try at stupid advice
	- bf: ls-latex .yo author
	- bf: Excutable.make install

pl 26.jcn2
	- no changes

pl 26.hwn1
	- no changes; just testin' make update

pl 26.jcn1
	- no changes

pl 26
	- make apply
	- package-to.diff.gz
	- package-from-to.diff.gz with state-vector
	- state vector

pl 25
	- bf: add-html-footer.py: version_str iso tuple
	- typo: Executable.make
	- for 2latex: yodl2latex of yodl-1.30.0.pre9
	- package depth 'detected' by configure (kinda ugh)
	- fixes (HWN)

pl 24
	- binary releases:
	  * make deb
	    * dpkg 1.4.0.23.2
	    * debhelper 0.96
	    * /usr/bin/db_*: remove -p from install options (urg)
	  * make rpm
	  * make zip
	- debian fixes
	- SEXECUTABLES / EXECUTABLES (JBR)
	- fixed package-zip.sh (again?)
	- bf's: make zip
	- some doco