@@ -247,5 +247,5 @@ itemize(
 it()nemail(Han-wen Nienhuys)(hanwen@cs.uu.nl)
     lurl(http://www.cs.uu.nl/people/hanwen)
 it()nemail(Jan Nieuwenhuizen)(janneke@gnu.org)
-    lurl(http://www.digicash.com/~jan)
+    lurl(http://www.xs4all.nl/~jantien)
 )
