@@ -86,5 +86,5 @@ manpageauthor()
 Please consult the documentation file file(AUTHORS) for more detailed
 information, and small contributions. 
 
-nemail(Jan Nieuwenhuizen)(janneke@gnu.org), lurl(http://www.digicash.com/~jan)
+nemail(Jan Nieuwenhuizen)(janneke@gnu.org), lurl(http://www.xs4all.nl/~jantien)
 
