@@ -27,7 +27,7 @@ it()nemail(Han-Wen Nienhuys)(hanwen@cs.uu.nl),
     nl()
     Main author.
 it()nemail(Jan Nieuwenhuizen)(janneke@gnu.org), 
-    lurl(http://www.digicash.com/~jan)
+    lurl(http://www.xs4all.nl/~jantien)
     nl()
     Main author
 it()nemail(Alexandre Oliva)(oliva@dcc.unicamp.br), 
