@@ -38,6 +38,7 @@ DEFS = @DEFS@
 DEFINES = @DEFS@ @DEFINES@
 COMPILEINFO = @COMPILEINFO@
 DOTEXE = @DOTEXE@
+INSTALL = @INSTALL@
 BASH = @BASH@
 BISON = @BISON@
 FIND = @FIND@
