@@ -6,8 +6,8 @@ include $(depth)/make/Stepmake.make
 include $(make-dir)/Mutopia.make
 
 # do Coriolan if you have plenty RAM / CPU
-# examples=coriolan oboi-part viola-part
-examples= oboi-part viola-part
+examples=coriolan oboi-part viola-part
+# examples= oboi-part viola-part
 
 include $(stepdir)/WWW.make
 
