@@ -4,7 +4,6 @@
 
 package-depth = @package_depth@
 
-INSTALL = @INSTALL@
 USER_CXXFLAGS = @CXXFLAGS@ @CPPFLAGS@
 USER_LDFLAGS = 
 
@@ -39,6 +38,7 @@ DEFS = @DEFS@
 DEFINES = @DEFS@ @DEFINES@
 COMPILEINFO = @COMPILEINFO@
 DOTEXE = @DOTEXE@
+INSTALL = @INSTALL@
 BASH = @BASH@
 BISON = @BISON@
 FIND = @FIND@
